# linkedmusic-datalake

./: README.md  docker-compose.yml  index_data.py  index_data_compact.py  pyproject.toml
app/: Dockerfile  app_run.sh  requirements.txt
app/linkedmusic_search/: app.py  similar_terms.jsonld
app/linkedmusic_search/templates/: search.html
cantusdb/turtle/: csv2rdf_by_RDFLib.py  ontology_dict.csv  openrefine_csv_test.csv  pyproject.toml  reconciled_cantus_01102024_updated_simplified.csv  test.ttl
solr/: Dockerfile  solr_run.sh
solr/test_core/: core.properties
solr/test_core/conf/: schema.xml
