[tool.poetry]
name = "turtle"
version = "0.1.0"
description = ""
authors = ["Yueqiao Zhang <yueqiao.zhang@mail.mcgill.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
rdflib = "^7.0.0"
validators = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
